--- a/project/templates/update_profile.html
+++ b/project/templates/update_profile.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
 <div class="container">
@@ -12,4 +12,4 @@
         </div>
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
