--- a/project/templates/search.html
+++ b/project/templates/search.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="container">
@@ -22,4 +22,4 @@
         </div>
     {% endif %}
 </div>
-{% endblock %} -->
+{% endblock %}
