--- a/project/templates/project.html
+++ b/project/templates/project.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
 <div class="container">
@@ -66,4 +66,4 @@
     <p>No reviews yet</p>
     {% endif %}
 </div>
-{% endblock %} -->
+{% endblock %}
