--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-3">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary mb-3">
     <div class="container-fluid">
         <button class="navbar-toggler" data-toggle="collapse" data-target="#menu"><span class="navbar-toggler-icon"></span></button>
         <a href="{% url 'index' %}" class="navbar-brand">awwwards.</a>
@@ -32,4 +32,4 @@
             </ul>
         </div>
     </div>
-</nav> -->
+</nav>
