--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container">
     <div class="row my-5">
@@ -20,4 +20,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
