create the base html

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap4 %}
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Awwwards - Website Awards - Best Web Design Trends</title>
+    <title>Awards</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://www.awwwards.com/favicon.ico" />
     {% block styles %}
     {% bootstrap_css %}
@@ -22,4 +22,4 @@
     {% bootstrap_javascript %}
     {% endblock %}
 </body>
-</html> -->
+</html>
