create the  registration

--- a/project/templates/registration/registration_form.html
+++ b/project/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'registration/base.html' %}
+{% extends 'registration/base.html' %}
 {% load bootstrap4 %}
 {% block content %}
 <div class="container">
@@ -13,4 +13,4 @@
         </div>
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
