--- a/project/templates/registration/base.html
+++ b/project/templates/registration/base.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap4 %}
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -22,4 +22,4 @@
     {% bootstrap_javascript %}
     {% endblock %}
 </body>
-</html> -->
+</html>
